vbnc/vbnc/vbnc/tests/Errors/30311-3.vb
Class T
    Const M_Char_Char As Char = True
End Class